--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aagu.ioc</groupId>
-    <artifactId>IOC</artifactId>
+    <artifactId>TinyIoc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -78,6 +78,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
