添加data-初步支持数据库

--- a/app.properties
+++ b/app.properties
@@ -1,3 +1,6 @@
 factory = annotation
 hello = 1784
 enable-aop = true
+enable-data = true
+dataSourceUrl = jdbc:sqlite:/data/JavaLearning/IOC/testdb.db
+dataSourceDriver = org.sqlite.JDBC
