--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     </modules>
 
     <properties>
-        <kotlin.version>1.3.61</kotlin.version>
+        <kotlin.version>1.3.71</kotlin.version>
+        <kotlin.coroutine.version>1.3.5</kotlin.coroutine.version>
     </properties>
 
     <dependencies>
@@ -28,7 +29,7 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>1.3.3</version>
+            <version>${kotlin.coroutine.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
