@Wire:修复注解在AOP中不生效的问题

--- a/app.properties
+++ b/app.properties
@@ -4,3 +4,5 @@ enable-aop = true
 enable-data = true
 dataSourceUrl = jdbc:sqlite:/data/JavaLearning/IOC/testdb.db
 dataSourceDriver = org.sqlite.JDBC
+dataSourceTimeout = 2000L
+dataSourceMaxConnections = 20
