--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>data</module>
         <module>mvc</module>
         <module>web</module>
+        <module>tx</module>
     </modules>
 
     <properties>
