TX:将tx模块加入TinyIOC扫描路径 IOC：接口注入支持通过getBean(clazz: Class<T>)获取实例

--- a/data/pom.xml
+++ b/data/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.aagu.framework</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>tx</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
