--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>mvc</module>
         <module>web</module>
         <module>tx</module>
+        <module>flow</module>
     </modules>
 
     <properties>
